fix color contrast in dropdown for windows

--- a/styles/Settings.module.scss
+++ b/styles/Settings.module.scss
@@ -59,6 +59,12 @@
 		cursor: pointer;
 		font-family: inherit;
 
+		// for windows
+		option,
+		optgroup {
+			color: initial;
+		}
+
 		&:hover {
 			color: var(--primary);
 		}
